# ImageNetUtils

./: README.md  parse_class_hierarchy.py  setup.cfg
imagenet_utils/: __init__.py  metadata.py
imagenet_utils/versions/: __init__.py  in13_felines.py
tests_unit/: test_init.py  test_versions.py
