[metadata]
name = imagenet_utils
description = utilities for working with ImageNet subsets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenediktAlkin/ImageNetUtils
project_urls =
    Source Code = https://github.com/BenediktAlkin/ImageNetUtils
    Bug Tracker = https://github.com/BenediktAlkin/ImageNetUtils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.6


[options.packages.find]
exclude =
    tests_unit*
